--- a/201029 목, 크롤링_치즈 구매후기_데이터 2.ipynb
+++ b/201029 목, 크롤링_치즈 구매후기_데이터 2.ipynb
@@ -3016,7 +3016,9 @@
    "execution_count": 110,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# testtesttesttesttesttesttesttest"
+   ]
   },
   {
    "cell_type": "code",
